Fixed styling issue where on mobile sized screens, div elements were causing glitches in component layout and presentation. Also began on mobile version view of all pages.

--- a/src/index.css
+++ b/src/index.css
@@ -273,4 +273,21 @@ code {
   .contact-link:hover {
     color: var(--clr-accent);
   }
-  
+
+/* Screen Optimization */
+
+@media (max-width: 1919px ) {
+  .split, .side.strip{
+    display: none;
+  }
+
+  .centered.strip {
+    object-fit: cover;
+  }
+}
+
+@media (max-width: 500px) {
+  .centered.strip {
+    width: 100%;
+  }
+}
